# azure-iot-sdk-samples

./: .gitignore  README.md
samples/iothub_client/serializer/mqtt/: CMakeLists.txt  Makefile
samples/iothub_client/serializer/mqtt/include/: mqtt_sample.h
samples/iothub_client/serializer/mqtt/src/: main.c  mqtt_sample.c
